syntax = "proto3";

package pgv;

import "validate/validate.proto";

message Parent {
  repeated Child children = 1;
}

message Child {
  uint64 int64Range = 1 [(validate.rules).uint64 = { gte: 10, lte: 20 }];
  double doubleRange = 2 [(validate.rules).double = { gte: 10, lte: 20 }];
  string stringPattern = 3 [(validate.rules).string.pattern = "^[A-Z][a-z]*(-[A-Z][a-z]*)?( [A-Z][a-z]*(-[A-Z][a-z]*)?)* [A-Z][a-z]*(-[A-Z][a-z]*)?$"];
}
